@@ -1,0 +1,5 @@
+Bredbandskollen's test gives you a measurement that you can compare to the
+rate you pay for with your ISP, while at the same time, with the help of the
+results, you can make sure that your technical equipment is working properly.
+This tool is primarily intended for the swedish consumer ISP market, but
+works well in most of northern and central Europe.
